@@ -7,6 +7,7 @@
 * Fix - When a customer changes their address on their account or subscription, make sure the new address is saved when HPOS is enabled.
 * Fix - Removed the potential for an infinite loop when getting a subscription's related orders while the subscription is being loaded.
 * Dev - Replace code using get_post_type( $subscription_id ) with WC Data Store get_order_type().
+* Dev - Add subscriptions-core library version to the WooCommerce system status report.
 
 = 5.1.0 - 2022-11-24 =
 * Fix - Set payment tokens when copying data between orders and subscriptions in a CRUD compatible way. Fixes PHP notices during renewal order process.
